Refactor test_strategies.py to improve readability and add additional test cases

--- a/eqprop/notebooks/toy_example.ipynb
+++ b/eqprop/notebooks/toy_example.ipynb
@@ -107,11 +107,260 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "\n",
+    "from src.eqprop.eqprop_util import SymReLU\n",
+    "\n",
+    "# xor for newton strategy\n",
+    "from src.eqprop.strategy import NewtonStrategy\n",
+    "\n",
+    "model = torch.nn.Sequential(torch.nn.Linear(2, 1, bias=True), torch.nn.Linear(1, 1, bias=True))\n",
+    "model[0].weight.data = torch.tensor([[1.0, 1.0]])\n",
+    "model[0].bias.data = torch.tensor([1.0])\n",
+    "model[1].weight.data = torch.tensor([[2.0]])\n",
+    "model[1].bias.data = torch.tensor([0.0])\n",
+    "st = NewtonStrategy(\n",
+    "    activation=SymReLU(Vl=-0.6, Vr=0.6),\n",
+    "    clip_threshold=0.1,\n",
+    "    amp_factor=1.0,\n",
+    "    max_iter=5,\n",
+    "    atol=1e-5,\n",
+    "    add_nonlin_last=False,\n",
+    ")\n",
+    "st.set_strategy_params(model)\n",
+    "\n",
+    "inputs = torch.tensor([[-1, -1]]).float()\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# 2d vector map for the residual using quiver\n",
+    "import numpy as np\n",
+    "\n",
+    "resolution = 40\n",
+    "x = np.linspace(-3, 1, resolution)\n",
+    "y = np.linspace(-3, 1, resolution)\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "U = np.zeros_like(X)\n",
+    "V = np.zeros_like(Y)\n",
+    "\n",
+    "for i in range(resolution):\n",
+    "    for j in range(resolution):\n",
+    "        v = torch.tensor([[X[i, j], Y[i, j]]]).float()\n",
+    "        U[i, j], V[i, j] = st.residual(v, inputs, None).squeeze().numpy()\n",
+    "\n",
+    "\n",
+    "plt.quiver(X, Y, U, V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.quiver(X.diagonal(), Y.diagonal(), U.diagonal(), V.diagonal())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start from [-1,5. -1,5], and follow the -residual for 10 steps, with step size 0.1 add the trajectory to the quiver plot\n",
+    "v_init = torch.tensor([[-3.5, 1.5]]).float()\n",
+    "v_prev = v_init\n",
+    "plt.plot(v_init[0, 0], v_init[0, 1], \"ro\", alpha=0.5)\n",
+    "for i in range(30):\n",
+    "    v = v_prev - 0.23 * st.residual(v_prev, inputs, None).squeeze()\n",
+    "    # make the color darker and the point smaller for each step\n",
+    "    plt.plot(v[0, 0], v[0, 1], \"ro\", alpha=0.5 + 0.01 * i)\n",
+    "    # plot arrows for the step\n",
+    "    plt.arrow(\n",
+    "        v_prev[0, 0],\n",
+    "        v_prev[0, 1],\n",
+    "        v[0, 0] - v_prev[0, 0],\n",
+    "        v[0, 1] - v_prev[0, 1],\n",
+    "        head_width=0.01,\n",
+    "        head_length=0.01,\n",
+    "        fc=\"k\",\n",
+    "        ec=\"k\",\n",
+    "    )\n",
+    "    # mark the last point with a cross and show its coordinates\n",
+    "    if i % 5 == 4:\n",
+    "        plt.plot(v[0, 0], v[0, 1], \"rx\")\n",
+    "        plt.text(v[0, 0], v[0, 1], f\"({v[0, 0]:.3f}, {v[0, 1]:.3f})\")\n",
+    "    v_prev = v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_init = torch.tensor([[-1.5, -1.5]]).float()\n",
+    "v_prev = v_init\n",
+    "plt.plot(v_init[0, 0], v_init[0, 1], \"ro\", alpha=0.5)\n",
+    "for i in range(20):\n",
+    "    res = torch._linalg_solve_ex(st.jacobian(v_prev), -st.residual(v_prev, inputs, None))\n",
+    "    v = v_prev + 0.6 * res.result.squeeze()\n",
+    "    # make the color darker and the point smaller for each step\n",
+    "    plt.plot(v[0, 0], v[0, 1], \"ro\", alpha=0.5 + 0.02 * i)\n",
+    "    # plot arrows for the step\n",
+    "    plt.arrow(\n",
+    "        v_prev[0, 0],\n",
+    "        v_prev[0, 1],\n",
+    "        v[0, 0] - v_prev[0, 0],\n",
+    "        v[0, 1] - v_prev[0, 1],\n",
+    "        head_width=0.01,\n",
+    "        head_length=0.01,\n",
+    "        fc=\"k\",\n",
+    "        ec=\"k\",\n",
+    "    )\n",
+    "    print(v)\n",
+    "    # mark the last point with a cross and show its coordinates\n",
+    "    if i % 5 == 4:\n",
+    "        plt.plot(v[0, 0], v[0, 1], \"rx\")\n",
+    "        plt.text(v[0, 0], v[0, 1], f\"({v[0, 0]:.2f}, {v[0, 1]:.2f})\")\n",
+    "    v_prev = v\n",
+    "\n",
+    "resolution = 40\n",
+    "x = np.linspace(-2, 1, resolution)\n",
+    "y = np.linspace(-2, 1, resolution)\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "U = np.zeros_like(X)\n",
+    "V = np.zeros_like(Y)\n",
+    "\n",
+    "for i in range(resolution):\n",
+    "    for j in range(resolution):\n",
+    "        v_ = torch.tensor([[X[i, j], Y[i, j]]]).float()\n",
+    "        res2 = torch._linalg_solve_ex(st.jacobian(v_), -st.residual(v_, inputs, None))\n",
+    "        U[i, j], V[i, j] = res2.result.squeeze().numpy()\n",
+    "\n",
+    "\n",
+    "plt.quiver(X, Y, U, V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use successive over-relaxation to solve the system\n",
+    "v_init = torch.tensor([-1.5, -1.5]).float()\n",
+    "v_prev = v_init\n",
+    "plt.plot(v_init[0], v_init[1], \"ro\", alpha=0.5)\n",
+    "omega = 0.5\n",
+    "for i in range(10):\n",
+    "    A = st.jacobian(v_prev)\n",
+    "    L = torch.tril(A, -1).squeeze()\n",
+    "    D = torch.diagonal(A).squeeze()\n",
+    "    U = torch.triu(A, 1).squeeze()\n",
+    "    B = -st.residual(v_prev, inputs, None)\n",
+    "    res = torch._linalg_solve_ex(\n",
+    "        D.diag_embed() + omega * L,\n",
+    "        ((omega - 1) * (D * v_prev).T - omega * U @ v_prev.T + omega * B).T,\n",
+    "    )\n",
+    "    v = res.result.squeeze()\n",
+    "    print(v)\n",
+    "    # make the color darker and the point smaller for each step\n",
+    "    plt.plot(v[0], v[1], \"ro\", alpha=0.5 + 0.05 * i)\n",
+    "    # plot arrows for the step\n",
+    "    plt.arrow(\n",
+    "        v_prev[0],\n",
+    "        v_prev[1],\n",
+    "        v[0] - v_prev[0],\n",
+    "        v[1] - v_prev[1],\n",
+    "        head_width=0.01,\n",
+    "        head_length=0.01,\n",
+    "        fc=\"k\",\n",
+    "        ec=\"k\",\n",
+    "    )\n",
+    "    # mark the last point with a cross and show its coordinates\n",
+    "    if i % 5 == 4:\n",
+    "        plt.plot(v[0], v[1], \"rx\")\n",
+    "        plt.text(v[0], v[1], f\"({v[0]:.2f}, {v[1]:.2f})\")\n",
+    "    v_prev = v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = st.jacobian(v_init).squeeze()\n",
+    "L = torch.tril(A, -1)\n",
+    "D = torch.diagonal(A)\n",
+    "U = torch.triu(A, 1)\n",
+    "B = -st.residual(v_init, inputs, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D.squeeze().diag_embed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(omega - 1) * D * v_init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D.diag_embed() + omega * L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(omega - 1) * D * v_prev.T - omega * U @ v_prev.T + omega * B.T"
+   ]
   }
  ],
  "metadata": {
@@ -130,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
