Fix i_ext update sign & test cases

--- a/eqprop/notebooks/toy_example.ipynb
+++ b/eqprop/notebooks/toy_example.ipynb
@@ -109,7 +109,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# XOR2"
+   ]
   },
   {
    "cell_type": "code",
@@ -119,7 +121,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "from src.eqprop.eqprop_util import SymReLU\n",
+    "from src.eqprop.eqprop_util import P3OTS, SymReLU\n",
     "\n",
     "# xor for newton strategy\n",
     "from src.eqprop.strategy import NewtonStrategy\n",
@@ -130,7 +132,7 @@
     "model[1].weight.data = torch.tensor([[2.0]])\n",
     "model[1].bias.data = torch.tensor([0.0])\n",
     "st = NewtonStrategy(\n",
-    "    activation=SymReLU(Vl=-0.6, Vr=0.6),\n",
+    "    activation=P3OTS(Is=1e-6, Vl=-0.6, Vr=0.6),\n",
     "    clip_threshold=0.1,\n",
     "    amp_factor=1.0,\n",
     "    max_iter=5,\n",
@@ -168,21 +170,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.quiver(X.diagonal(), Y.diagonal(), U.diagonal(), V.diagonal())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# start from [-1,5. -1,5], and follow the -residual for 10 steps, with step size 0.1 add the trajectory to the quiver plot\n",
-    "v_init = torch.tensor([[-3.5, 1.5]]).float()\n",
+    "v_init = torch.tensor([[-2.0, 3.5]]).float()\n",
     "v_prev = v_init\n",
     "plt.plot(v_init[0, 0], v_init[0, 1], \"ro\", alpha=0.5)\n",
-    "for i in range(30):\n",
-    "    v = v_prev - 0.23 * st.residual(v_prev, inputs, None).squeeze()\n",
+    "for i in range(20):\n",
+    "    v = v_prev - 0.3 * st.residual(v_prev, inputs, None).squeeze()\n",
     "    # make the color darker and the point smaller for each step\n",
     "    plt.plot(v[0, 0], v[0, 1], \"ro\", alpha=0.5 + 0.01 * i)\n",
     "    # plot arrows for the step\n",
@@ -200,7 +193,22 @@
     "    if i % 5 == 4:\n",
     "        plt.plot(v[0, 0], v[0, 1], \"rx\")\n",
     "        plt.text(v[0, 0], v[0, 1], f\"({v[0, 0]:.3f}, {v[0, 1]:.3f})\")\n",
-    "    v_prev = v"
+    "    v_prev = v\n",
+    "\n",
+    "resolution = 30\n",
+    "x = np.linspace(-2, 1, resolution)\n",
+    "y = np.linspace(-1.5, 1.5, resolution)\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "U = np.zeros_like(X)\n",
+    "V = np.zeros_like(Y)\n",
+    "\n",
+    "for i in range(resolution):\n",
+    "    for j in range(resolution):\n",
+    "        v_ = torch.tensor([[X[i, j], Y[i, j]]]).float()\n",
+    "        U[i, j], V[i, j] = st.residual(v_, inputs, None).squeeze().numpy()\n",
+    "\n",
+    "\n",
+    "plt.quiver(X, Y, U, V)"
    ]
   },
   {
@@ -209,12 +217,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_init = torch.tensor([[-1.5, -1.5]]).float()\n",
+    "v_prev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_init = torch.tensor([[-2.0, 3.5]]).float()\n",
+    "i_ext = torch.tensor([[1e-3]])\n",
     "v_prev = v_init\n",
     "plt.plot(v_init[0, 0], v_init[0, 1], \"ro\", alpha=0.5)\n",
     "for i in range(20):\n",
-    "    res = torch._linalg_solve_ex(st.jacobian(v_prev), -st.residual(v_prev, inputs, None))\n",
-    "    v = v_prev + 0.6 * res.result.squeeze()\n",
+    "    res = torch._linalg_solve_ex(st.jacobian(v_prev), -st.residual(v_prev, inputs, i_ext))\n",
+    "    v = v_prev + 1 * res.result.squeeze()\n",
     "    # make the color darker and the point smaller for each step\n",
     "    plt.plot(v[0, 0], v[0, 1], \"ro\", alpha=0.5 + 0.02 * i)\n",
     "    # plot arrows for the step\n",
@@ -236,8 +254,8 @@
     "    v_prev = v\n",
     "\n",
     "resolution = 40\n",
-    "x = np.linspace(-2, 1, resolution)\n",
-    "y = np.linspace(-2, 1, resolution)\n",
+    "x = np.linspace(-2, 0, resolution)\n",
+    "y = np.linspace(-2, 0, resolution)\n",
     "X, Y = np.meshgrid(x, y)\n",
     "U = np.zeros_like(X)\n",
     "V = np.zeros_like(Y)\n",
@@ -250,6 +268,46 @@
     "\n",
     "\n",
     "plt.quiver(X, Y, U, V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_prev[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.eqprop.strategy import SecondOrderStrategy\n",
+    "\n",
+    "\n",
+    "def int_relu_f(v, vr=0.6):\n",
+    "    w = ((torch.abs(v) - vr) > 0) * (v - vr)\n",
+    "    return 0.5 * torch.sum(w**2)\n",
+    "\n",
+    "\n",
+    "def energy(st: SecondOrderStrategy, v, x, i_ext):\n",
+    "    L = st.laplacian()\n",
+    "    R = st.rhs(x)\n",
+    "    if i_ext is not None:\n",
+    "        R[:, -st.dims[-1] :] += i_ext * st.amp_factor\n",
+    "    return v @ L @ v.T + v @ (R) + int_relu_f(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy"
    ]
   },
   {
@@ -379,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
