Chore: Fix issues with model bias and add examples using torch and numpy

--- a/eqprop/notebooks/playground.ipynb
+++ b/eqprop/notebooks/playground.ipynb
@@ -20,6 +20,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "model = nn.Sequential(nn.Linear(1, 5, bias=False), nn.ReLU(), nn.Linear(5, 1))\n",
+    "\n",
+    "B = []\n",
+    "for m in model.modules():\n",
+    "    if m.__class__.__name__.startswith(\"Linear\"):\n",
+    "        B.append(m.bias)\n",
+    "        print(m.bias)\n",
+    "\n",
+    "Btot = torch.cat(B, dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model[0].bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, param in model.named_parameters():\n",
+    "    print(name, param)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -143,6 +182,18 @@
    "outputs": [],
    "source": [
     "x.grad = torch.ones_like(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = torch.tensor([1.0, 2.0, 3.0], requires_grad=False)\n",
+    "\n",
+    "t2 = t.clone().detach()\n",
+    "t2"
    ]
   },
   {
@@ -330,6 +381,36 @@
    "outputs": [],
    "source": [
     "lin.weight.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## einops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "x = torch.rand((4))  # batch_size x input_dim\n",
+    "W = torch.rand((3, 4))  # output_dim x input_dim\n",
+    "\n",
+    "y = torch.einsum(\"...i,oi->...o\", x, W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.shape"
    ]
   },
   {
@@ -696,6 +777,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "critertion = nn.MSELoss(reduction=\"sum\")\n",
+    "\n",
+    "y_hat = torch.arange(3).repeat(4, 1).float().requires_grad_(True)\n",
+    "y = torch.zeros((4, 3)).float()\n",
+    "loss = critertion(y_hat, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_hat.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "li = [1, 2, 3]\n",
+    "arr = np.random.rand(*tuple(li))\n",
+    "len(arr.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -748,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0rc1"
   },
   "vscode": {
    "interpreter": {
