--- a/eqprop/notebooks/toy_example.ipynb
+++ b/eqprop/notebooks/toy_example.ipynb
@@ -254,8 +254,8 @@
     "    v_prev = v\n",
     "\n",
     "resolution = 40\n",
-    "x = np.linspace(-2, 0, resolution)\n",
-    "y = np.linspace(-2, 0, resolution)\n",
+    "x = np.linspace(v_init[0, 0], v_init[0, 1], resolution)\n",
+    "y = np.linspace(v_init[0, 0], v_init[0, 1], resolution)\n",
     "X, Y = np.meshgrid(x, y)\n",
     "U = np.zeros_like(X)\n",
     "V = np.zeros_like(Y)\n",
@@ -276,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_prev[0, 0]"
+    "st.residual(v_prev, inputs, None)"
    ]
   },
   {
