--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -116,15 +116,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ep2.model[0].__name__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from functools import partial\n",
     "\n",
     "from src.rqprop.eqprop_util import init_params\n",
@@ -194,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## condition number"
+    "# condition number"
    ]
   },
   {
@@ -203,17 +194,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.linalg as la\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "A = torch.randn(3, 3)\n",
-    "Lap = torch.cat(\n",
-    "    [\n",
-    "        torch.cat([torch.diag(A.sum(dim=1)), -A], dim=1),\n",
-    "        torch.cat([-A.T, torch.diag(A.sum(dim=0))], dim=1),\n",
-    "    ],\n",
-    "    dim=0,\n",
-    ")"
+    "# visualize weights\n",
+    "import torch\n",
+    "\n",
+    "w = torch.randn(28, 28)\n",
+    "plt.imshow(w, cmap=\"viridis\")\n",
+    "# add colorbar\n",
+    "plt.colorbar()"
    ]
   },
   {
@@ -222,7 +211,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(la.cond(Lap), la.cond(A))"
+    "# check matrix spectral density\n",
+    "w = torch.randn(10000, 10000)\n",
+    "# find eigenvalues\n",
+    "eigvals = torch.linalg.eigvals(w)\n",
+    "\n",
+    "# plot histogram\n",
+    "plt.hist(eigvals, bins=100)"
    ]
   },
   {
@@ -231,27 +226,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lu, piv = la.lu_factor(Lap)\n",
-    "# check factorization\n",
-    "torch.allclose(Lap, torch.matmul(lu, torch.eye(6)[piv]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.eye(6)[piv]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "piv"
+    "# plot marchenko-pastur distribution\n",
+    "import numpy as np\n",
+    "\n",
+    "sigma = 1\n",
+    "m = 1000\n",
+    "n = 100\n",
+    "ratio = m / n\n",
+    "\n",
+    "X = np.random.normal(0, sigma, (m, n))\n",
+    "# singular values\n",
+    "s = np.linalg.svd(X, compute_uv=False) / n\n",
+    "\n",
+    "\n",
+    "def mu_plus_minus(sigma, ratio, s):\n",
+    "    return sigma * (1 + np.sqrt(ratio)) ** 2, sigma * (1 - np.sqrt(ratio)) ** 2\n",
+    "\n",
+    "\n",
+    "plt.hist(s, bins=100, density=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -612,32 +605,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "\n",
-    "sys.path.append(\"../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.utils import eqprop_util"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "\n",
-    "x = torch.linspace(-0.0, 1.0, 100)\n",
-    "y = eqprop_util.rectifier_a(x)\n",
-    "y2 = eqprop_util.rectifier_p3_a(x)\n",
+    "from src.eqprop import eqprop_util\n",
+    "\n",
+    "x = torch.linspace(-1.0, 1.0, 100)\n",
+    "ots = eqprop_util.OTS(Vl=-0, Vr=0, Is=1e-6, Vth=0.026)\n",
+    "p3ots = eqprop_util.P3OTS(Vl=-0, Vr=0, Is=1e-6, Vth=0.026)\n",
+    "y = ots.i(x)\n",
+    "y2 = p3ots.i(x)\n",
     "# y4 = eqprop_util.rectifier_poly_i(x, power=3)\n",
     "plt.plot(x, y, label=\"exponential\")\n",
     "plt.plot(x, y2, label=\"quadratic\")\n",
@@ -653,17 +630,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rectifier_pseudo_g(V: torch.Tensor):\n",
-    "    return"
+    "symtanh = eqprop_util.Symtanh(Vl=0.3, Vr=0.7, Is=1, Vth=0.2)\n",
+    "y = symtanh.i(x)\n",
+    "b = symtanh.a(x)\n",
+    "plt.plot(x, y, label=\"symtanh\")\n",
+    "plt.plot(x, b, label=\"symtanh a\")"
    ]
   },
   {
@@ -1005,15 +976,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info1.item() == 7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "c_3"
    ]
   },
@@ -1094,10 +1056,10 @@
    "outputs": [],
    "source": [
     "# factorize the matrix with Cholesky decomposition\n",
-    "U = la.cholesky(C + np.eye(n) * 1e-7)\n",
+    "U = nla.cholesky(C + np.eye(n) * 1e-7)\n",
     "\n",
     "# compare with lapack wrapper\n",
-    "U2, piv, rank, info = la.lapack.dpstf2(C + np.eye(n) * 1e-7)\n",
+    "U2, piv, rank, info = sla.lapack.dpstf2(C + np.eye(n) * 1e-7)\n",
     "print(info)\n",
     "U3 = nla.cholesky(C + np.eye(n) * 1e-7)"
    ]
@@ -1159,7 +1121,7 @@
    "outputs": [],
    "source": [
     "%%timeit\n",
-    "la.cholesky(C)"
+    "tla.cholesky(C)"
    ]
   },
   {
@@ -1179,7 +1141,7 @@
    "outputs": [],
    "source": [
     "%%timeit\n",
-    "la.lapack.spstf2(B)"
+    "sla.lapack.spstf2(B)"
    ]
   },
   {
@@ -1206,16 +1168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "la.eigvalsh(C)"
+    "tla.eigvalsh(C)"
    ]
   },
   {
@@ -1233,7 +1186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la.expm_cond(C)"
+    "tla.expm_cond(C)"
    ]
   },
   {
@@ -1267,12 +1220,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use julia bindings\n",
     "import julia\n",
-    "from julia import Base\n",
     "\n",
     "julia.install()\n",
-    "j = julia.Julia()\n",
-    "j.using(\"LinearAlgebra\")"
+    "from julia import Base\n",
+    "\n",
+    "Base.sind(90)"
    ]
   },
   {
