Feat/hydra zen0 (#7)
* Add debug option for FDR in Makefile and set seed value in train.yaml

* Feat: Change data and model config to hydra-zen

* Chore: Update code-quality-pr.yaml and test.yml

* Refactor code and fix formatting issues

* Feat: Add EqProp model config and fix threshold_mode in ReduceLROnPlateauConfig

* Add various eqprop, model scheduler and optimizer configurations

* Feat: Add XORDataModule and update logger in eval.yaml

* Refactor eqprop_util.py and fix import in eval.py and train.py

* Update project structure and configurations

--- a/notebooks/eqprop/newton_solver.ipynb
+++ b/notebooks/eqprop/newton_solver.ipynb
@@ -872,12 +872,12 @@
     "for i in range(n):\n",
     "    A[i * block_size : (i + 1) * block_size, i * block_size : (i + 1) * block_size] = blocks[i]\n",
     "    if i < n - 1:\n",
-    "        A[\n",
-    "            i * block_size : (i + 1) * block_size, (i + 1) * block_size : (i + 2) * block_size\n",
-    "        ] = blocks[i]\n",
-    "        A[\n",
-    "            (i + 1) * block_size : (i + 2) * block_size, i * block_size : (i + 1) * block_size\n",
-    "        ] = blocks[i]\n",
+    "        A[i * block_size : (i + 1) * block_size, (i + 1) * block_size : (i + 2) * block_size] = (\n",
+    "            blocks[i]\n",
+    "        )\n",
+    "        A[(i + 1) * block_size : (i + 2) * block_size, i * block_size : (i + 1) * block_size] = (\n",
+    "            blocks[i]\n",
+    "        )\n",
     "L_full = torch.cholesky(A)\n",
     "X_full = torch.cholesky_solve(B.unsqueeze(1), L_full).squeeze()\n",
     "\n",
