--- a/notebooks/2.0-lhr-hydra-zen.ipynb
+++ b/notebooks/2.0-lhr-hydra-zen.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How it works"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -168,6 +175,56 @@
    "outputs": [],
    "source": [
     "model = instantiate(config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## launch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hydra import compose, initialize\n",
+    "from hydra_zen import launch, load_from_yaml\n",
+    "\n",
+    "from configs import register_everything\n",
+    "from src.train import main\n",
+    "\n",
+    "store._overwrite_ok = True\n",
+    "register_everything()  # config is registered\n",
+    "with initialize(config_path=\"../configs\", version_base=\"1.3\"):\n",
+    "    cfg = compose(config_name=\"train\", return_hydra_config=True, overrides=[\"debug=fdr\"])\n",
+    "job = launch(\n",
+    "    cfg,\n",
+    "    main,\n",
+    "    job_name=\"test\",\n",
+    "    to_dictconfig=True,\n",
+    "    version_base=\"1.3\",\n",
+    "    # config_name=\"train.yaml\",\n",
+    "    # overrides=[\"+debug=fdr\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job.return_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### multirun"
    ]
   },
   {
