--- a/notebooks/eqprop/toy_example.ipynb
+++ b/notebooks/eqprop/toy_example.ipynb
@@ -175,7 +175,7 @@
     "v_prev = v_init\n",
     "plt.plot(v_init[0, 0], v_init[0, 1], \"ro\", alpha=0.5)\n",
     "for i in range(20):\n",
-    "    v = v_prev - 0.3 * st.residual(v_prev, inputs, None).squeeze()\n",
+    "    v = v_prev - 0.5 * st.residual(v_prev, inputs, None).squeeze()\n",
     "    # make the color darker and the point smaller for each step\n",
     "    plt.plot(v[0, 0], v[0, 1], \"ro\", alpha=0.5 + 0.01 * i)\n",
     "    # plot arrows for the step\n",
@@ -419,6 +419,125 @@
    "source": [
     "(omega - 1) * D * v_prev.T - omega * U @ v_prev.T + omega * B.T"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# XOR-dummy vs direct interleave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "from src.core.eqprop.eqprop_util import init_params, interleave\n",
+    "from src.models.components.simple_dense_net import SimpleDenseNet\n",
+    "\n",
+    "interleave.set_num_output(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def interleave_forward(x):\n",
+    "    return x[:, ::2] - x[:, 1::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net1 = SimpleDenseNet(cfg=[2, 10, 4], bias=False, batch_norm=False)\n",
+    "net1.apply(init_params(min_w=1e-6, max_w_gain=0.08))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## instantiaate XOR model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hydra import compose, initialize\n",
+    "from hydra_zen import instantiate, store\n",
+    "\n",
+    "from configs import register_everything\n",
+    "\n",
+    "store._overwrite_ok = True\n",
+    "overrrides = [\n",
+    "    \"experiment=ep-xor-dummy\",\n",
+    "    \"model.positive_w=false\",\n",
+    "    \"model.bias=false\",\n",
+    "    \"model.normalize_weights=false\",\n",
+    "    \"model.clip_weights=false\",\n",
+    "    \"model.scale_output=2\",\n",
+    "    \"model.scale_input=1\",\n",
+    "]\n",
+    "register_everything()\n",
+    "with initialize(config_path=\"../../configs\", version_base=\"1.3\"):\n",
+    "    cfg = compose(config_name=\"train\", return_hydra_config=True, overrides=overrrides)\n",
+    "\n",
+    "net2 = instantiate(cfg.model.net)()\n",
+    "dm = instantiate(cfg.data)\n",
+    "dm.setup()\n",
+    "dl = dm.train_dataloader()\n",
+    "print(net2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train the model\n",
+    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(net1.parameters(), lr=0.02, momentum=0.9)\n",
+    "optimizer2 = torch.optim.SGD(net2.parameters(), lr=0.02, momentum=0.9)\n",
+    "for i in range(200):\n",
+    "    for x, y in dl:\n",
+    "        yhat = interleave_forward(net1(x))\n",
+    "        # yhat = net2(x)\n",
+    "        # accuracy = (yhat.argmax(dim=1) == y).float().mean()\n",
+    "        loss = criterion(yhat, y)\n",
+    "        loss.backward()\n",
+    "        # net2.eqprop(x)\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "        if i % 50 == 0:\n",
+    "            print(f\"y: {y.item()}, yhat: {yhat.argmax(dim=1).item()}\")\n",
+    "            print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -437,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
