Add perturbation notebook & Refactor type hint

--- a/notebooks/eqprop/toy_example.ipynb
+++ b/notebooks/eqprop/toy_example.ipynb
@@ -493,7 +493,7 @@
     "with initialize(config_path=\"../../configs\", version_base=\"1.3\"):\n",
     "    cfg = compose(config_name=\"train\", return_hydra_config=True, overrides=overrrides)\n",
     "\n",
-    "net2 = instantiate(cfg.model.net)()\n",
+    "net2 = instantiate(cfg.model.net)()  # net is partially instantiated\n",
     "dm = instantiate(cfg.data)\n",
     "dm.setup()\n",
     "dl = dm.train_dataloader()\n",
