Update eqprop xor configurations to match with paper & Add max_w when init params

--- a/notebooks/eqprop/perturbation.ipynb
+++ b/notebooks/eqprop/perturbation.ipynb
@@ -24,10 +24,10 @@
     "store._overwrite_ok = True\n",
     "overrrides = [\n",
     "    \"experiment=ep-xor\",\n",
-    "    \"model.positive_w=false\",\n",
+    "    \"model.positive_w=true\",\n",
     "    \"model.bias=false\",\n",
     "    \"model.normalize_weights=false\",\n",
-    "    \"model.clip_weights=false\",\n",
+    "    \"model.clip_weights=true\",\n",
     "    \"model.scale_output=2\",\n",
     "    \"model.scale_input=1\",\n",
     "]\n",
