Feat: Add eqprop xor case with bceloss & update cfg setup in notebook

--- a/notebooks/eqprop/perturbation.ipynb
+++ b/notebooks/eqprop/perturbation.ipynb
@@ -23,19 +23,14 @@
     "\n",
     "store._overwrite_ok = True\n",
     "overrrides = [\n",
-    "    \"experiment=ep-xor\",\n",
-    "    \"model.positive_w=true\",\n",
-    "    \"model.bias=false\",\n",
-    "    \"model.normalize_weights=false\",\n",
-    "    \"model.clip_weights=true\",\n",
-    "    \"model.scale_output=2\",\n",
-    "    \"model.scale_input=1\",\n",
+    "    \"experiment=ep-xor-onehot\",\n",
+    "    \"model.net.bias=false\",\n",
     "]\n",
     "register_everything()\n",
     "with initialize(config_path=\"../../configs\", version_base=\"1.3\"):\n",
     "    cfg = compose(config_name=\"train\", return_hydra_config=True, overrides=overrrides)\n",
     "\n",
-    "net2 = instantiate(cfg.model.net)()  #\n",
+    "net2 = instantiate(cfg.model.net)\n",
     "dm = instantiate(cfg.data)\n",
     "dm.setup()\n",
     "dl = dm.train_dataloader()\n",
@@ -48,10 +43,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# print dictconfig\n",
+    "from omegaconf import OmegaConf\n",
+    "\n",
+    "print(OmegaConf.to_yaml(cfg.model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "\n",
     "# load model checkpoint\n",
-    "ckpt = torch.load(\"../logs/debug/runs/2024-04-05_15-26-14/checkpoints/epoch=19-step=80.ckpt\")\n",
+    "ckpt = torch.load(\"/root/workspace/ml/logs/train/runs/2024-04-11_21-01-18/checkpoints/last.ckpt\")\n",
     "# get weights from lin1 & last layers\n",
     "# w1 = ckpt[\"state_dict\"][\"net.model.0.weight\"]\n",
     "# w2 = ckpt[\"state_dict\"][\"net.model.1.weight\"]\n",
