Refactor: createCircuit function & more

--- a/notebooks/eqprop/perturbation.ipynb
+++ b/notebooks/eqprop/perturbation.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# setup model & data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -58,7 +65,7 @@
     "import torch\n",
     "\n",
     "# load model checkpoint\n",
-    "ckpt = torch.load(\"/root/workspace/ml/logs/train/runs/2024-04-11_21-01-18/checkpoints/last.ckpt\")\n",
+    "ckpt = torch.load(\"/root/workspace/ml/logs/train/runs/2024-05-07_23-21-47/checkpoints/last.ckpt\")\n",
     "# get weights from lin1 & last layers\n",
     "# w1 = ckpt[\"state_dict\"][\"net.model.0.weight\"]\n",
     "# w2 = ckpt[\"state_dict\"][\"net.model.1.weight\"]\n",
@@ -74,7 +81,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net2.model = ckpt[\"state_dict\"][\"net.model\"]"
+    "# print all parameters\n",
+    "for k, v in ckpt[\"state_dict\"].items():\n",
+    "    print(f\"name:{k}, {v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove the model prefix from the keys\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "new_state_dict = OrderedDict()\n",
+    "for k, v in ckpt[\"state_dict\"].items():\n",
+    "    name = k.replace(\"net.\", \"\")\n",
+    "    new_state_dict[name] = v\n",
+    "# overwrite model weights from checkpoint\n",
+    "net2.load_state_dict(new_state_dict, strict=False)\n",
+    "net2.ypred = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train XOR"
    ]
   },
   {
@@ -84,13 +118,51 @@
    "outputs": [],
    "source": [
     "# free phase\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "criterion = nn.MSELoss()\n",
     "for x, y in dl:\n",
-    "    u_free = net2.solver(x)\n",
-    "    # TODO: loss backprop, decouple solver from model.ypred\n",
-    "    u_nudge = net2.solver(x, y)\n",
-    "    u_diff = torch.norm(u_nudge - u_free)\n",
-    "    print(u_diff)"
+    "    x = x.view(x.size(0), -1)\n",
+    "    ypred = net2(x)\n",
+    "    # make y onehot\n",
+    "    y = torch.nn.functional.one_hot(y, 2).float()\n",
+    "    print(f\"ypred: {ypred.data}, y: {y}\")\n",
+    "    loss = criterion(ypred, y)\n",
+    "    loss.backward()\n",
+    "    u_nudge, _ = net2.solver(x, nudge_phase=True, grad=net2.ypred.grad)\n",
+    "    for idx, u_n in enumerate(u_nudge):\n",
+    "        u_f = net2.model[idx].get_buffer(\"positive_node\")\n",
+    "        diff = torch.norm(u_n - u_f)\n",
+    "        # compute cosine similarity\n",
+    "        cos = nn.CosineSimilarity(dim=1)\n",
+    "        cos_sim = cos(u_n, u_f)\n",
+    "        print(f\"Layer {idx} diff: {diff}, cos_sim: {cos_sim}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u_nudge[0].item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net2.model[1].get_buffer(\"positive_node\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
