--- a/notebooks/eqprop/playground.ipynb
+++ b/notebooks/eqprop/playground.ipynb
@@ -26,36 +26,9 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
     "\n",
-    "model = nn.Sequential(nn.Linear(1, 5, bias=False), nn.ReLU(), nn.Linear(5, 1))\n",
-    "\n",
-    "B = []\n",
-    "for m in model.modules():\n",
-    "    if m.__class__.__name__.startswith(\"Linear\"):\n",
-    "        B.append(m.bias)\n",
-    "        print(m.bias)\n",
-    "\n",
-    "Btot = torch.cat(B, dim=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model[0].bias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for name, param in model.named_parameters():\n",
-    "    print(name, param)"
+    "t = torch.tensor([1, 2, 3, 4, 6]).view(1, 5)\n",
+    "t[:, -2:]"
    ]
   },
   {
@@ -74,7 +47,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "mdl = torch.nn.Linear(1, 1)\n",
+    "mdl = torch.nn.Linear(1, 1, bias=False)\n",
     "mdl.register_buffer(\"free_node\", torch.rand((2, 1)))"
    ]
   },
@@ -633,7 +606,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "from src.eqprop import eqprop_util\n",
+    "from src.core.eqprop import eqprop_util\n",
     "\n",
     "ots = eqprop_util.OTS()\n",
     "V = torch.rand((10, 100))"
@@ -811,6 +784,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "# residual block\n",
+    "\n",
+    "\n",
+    "class ResBlock(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels, kernel_size, stride, padding):\n",
+    "        super(ResBlock, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(\n",
+    "            in_channels, out_channels, kernel_size, stride=stride, padding=padding\n",
+    "        )\n",
+    "        self.conv2 = nn.Conv2d(\n",
+    "            out_channels, out_channels, kernel_size, stride=stride, padding=padding\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.conv1(x)\n",
+    "        out = self.conv2(out)\n",
+    "        return out + x\n",
+    "\n",
+    "\n",
+    "blk = ResBlock(3, 3, 3, 1, 1)\n",
+    "print(list(blk.parameters()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -883,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
