--- a/notebooks/eqprop/toy_example.ipynb
+++ b/notebooks/eqprop/toy_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2 by 2 XOR problem"
+    "# 2 by 2 XOR problem"
    ]
   },
   {
@@ -127,21 +127,35 @@
     "from src.core.eqprop.strategy import NewtonStrategy\n",
     "\n",
     "model = torch.nn.Sequential(torch.nn.Linear(2, 1, bias=True), torch.nn.Linear(1, 1, bias=True))\n",
-    "model[0].weight.data = torch.tensor([[1.0, 1.0]])\n",
+    "model[0].weight.data = torch.tensor([[-1.0, -1.0]])\n",
     "model[0].bias.data = torch.tensor([1.0])\n",
     "model[1].weight.data = torch.tensor([[2.0]])\n",
     "model[1].bias.data = torch.tensor([0.0])\n",
     "st = NewtonStrategy(\n",
-    "    activation=P3OTS(Is=1e-6, Vl=-0.6, Vr=0.6),\n",
-    "    clip_threshold=0.1,\n",
+    "    activation=P3OTS(Is=1e-6, Vl=-0.6, Vr=0.6, Vth=1.0),\n",
+    "    clip_threshold=0.5,\n",
     "    amp_factor=1.0,\n",
     "    max_iter=5,\n",
     "    atol=1e-5,\n",
     "    add_nonlin_last=False,\n",
     ")\n",
-    "st.set_strategy_params(model)\n",
-    "\n",
-    "inputs = torch.tensor([[-1, -1]]).float()\n",
+    "st.set_strategy_params(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize Trajectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = torch.tensor([[1, 1]]).float()\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -170,12 +184,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_trajectory(model, strategy, inputs):\n",
+    "    trajectory = []\n",
+    "    trajectory.append(inputs)\n",
+    "    for i in range(10):\n",
+    "        inputs = strategy(model, inputs, None)\n",
+    "        trajectory.append(inputs)\n",
+    "    trajectory = torch.cat(trajectory, 0).detach().numpy()\n",
+    "    plt.plot(trajectory[:, 0], trajectory[:, 1], \"o-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# start from [-1,5. -1,5], and follow the -residual for 10 steps, with step size 0.1 add the trajectory to the quiver plot\n",
-    "v_init = torch.tensor([[-2.0, 3.5]]).float()\n",
+    "v_init = torch.tensor([[-1.5, 1.5]]).float()\n",
     "v_prev = v_init\n",
     "plt.plot(v_init[0, 0], v_init[0, 1], \"ro\", alpha=0.5)\n",
     "for i in range(20):\n",
-    "    v = v_prev - 0.5 * st.residual(v_prev, inputs, None).squeeze()\n",
+    "    v = v_prev - 0.2 * st.residual(v_prev, inputs, None).squeeze()\n",
     "    # make the color darker and the point smaller for each step\n",
     "    plt.plot(v[0, 0], v[0, 1], \"ro\", alpha=0.5 + 0.01 * i)\n",
     "    # plot arrows for the step\n",
@@ -217,17 +247,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_prev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v_init = torch.tensor([[-2.0, 3.5]]).float()\n",
-    "i_ext = torch.tensor([[1e-3]])\n",
+    "v_init = torch.tensor([[-1.5, 1.5]]).float()\n",
+    "i_ext = torch.tensor([[0]])\n",
     "v_prev = v_init\n",
     "plt.plot(v_init[0, 0], v_init[0, 1], \"ro\", alpha=0.5)\n",
     "for i in range(20):\n",
@@ -299,15 +320,6 @@
     "    if i_ext is not None:\n",
     "        R[:, -st.dims[-1] :] += i_ext * st.amp_factor\n",
     "    return v @ L @ v.T + v @ (R) + int_relu_f(v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "energy"
    ]
   },
   {
@@ -424,47 +436,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# XOR-dummy vs direct interleave"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "\n",
-    "from src.core.eqprop.eqprop_util import init_params, interleave\n",
-    "from src.models.components.simple_dense_net import SimpleDenseNet\n",
-    "\n",
-    "interleave.set_num_output(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def interleave_forward(x):\n",
-    "    return x[:, ::2] - x[:, 1::2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net1 = SimpleDenseNet(cfg=[2, 10, 4], bias=False, batch_norm=False)\n",
-    "net1.apply(init_params(min_w=1e-6, max_w_gain=0.08))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## instantiaate XOR model"
    ]
   },
@@ -506,38 +477,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train the model\n",
-    "criterion = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(net1.parameters(), lr=0.02, momentum=0.9)\n",
-    "optimizer2 = torch.optim.SGD(net2.parameters(), lr=0.02, momentum=0.9)\n",
-    "for i in range(200):\n",
-    "    for x, y in dl:\n",
-    "        yhat = interleave_forward(net1(x))\n",
-    "        # yhat = net2(x)\n",
-    "        # accuracy = (yhat.argmax(dim=1) == y).float().mean()\n",
-    "        loss = criterion(yhat, y)\n",
-    "        loss.backward()\n",
-    "        # net2.eqprop(x)\n",
-    "        optimizer.step()\n",
-    "        optimizer.zero_grad()\n",
-    "        if i % 50 == 0:\n",
-    "            print(f\"y: {y.item()}, yhat: {yhat.argmax(dim=1).item()}\")\n",
-    "            print(loss.item())"
+    "# # train the model\n",
+    "# criterion = torch.nn.CrossEntropyLoss()\n",
+    "# # optimizer = torch.optim.SGD(net1.parameters(), lr=0.02, momentum=0.9)\n",
+    "# optimizer2 = torch.optim.SGD(net2.parameters(), lr=0.02, momentum=0.9)\n",
+    "# for i in range(200):\n",
+    "#     for x, y in dl:\n",
+    "#         yhat = interleave_forward(net1(x))\n",
+    "#         # yhat = net2(x)\n",
+    "#         # accuracy = (yhat.argmax(dim=1) == y).float().mean()\n",
+    "#         loss = criterion(yhat, y)\n",
+    "#         loss.backward()\n",
+    "#         # net2.eqprop(x)\n",
+    "#         optimizer.step()\n",
+    "#         optimizer.zero_grad()\n",
+    "#         if i % 50 == 0:\n",
+    "#             print(f\"y: {y.item()}, yhat: {yhat.argmax(dim=1).item()}\")\n",
+    "#             print(loss.item())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# d"
+    "# END"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
